--- a/.Service SSO/src/views/login.ejs
+++ b/.Service SSO/src/views/login.ejs
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-5 mx-auto" style="margin-top: 150px">
           <fieldset class="border rounded-3 p-3">
-            <legend class="float-none w-auto px-3">Login Form</legend>
+            <legend class="float-none w-auto px-3" style="text-align: center;">Login Form</legend>
 
             <div class="alert alert-danger my-1 none-flash" role="alert" id="flashMsg"></div>
             <div class="mb-3">
